--- a/supercon2/templates/training_data.html
+++ b/supercon2/templates/training_data.html
@@ -20,8 +20,8 @@
         <v-row justify="space-between" class="ma-0">
             <v-select v-model="selectedHeaders" :items="headers" label="Select Columns" multiple outlined
                       return-object></v-select>
-            <v-btn @click="send_all_new_records_to_label_studio" Depressed class="ma-1">Send all</v-btn>
-            <v-btn @click="open_dialog_token" Depressed class="ma-1">Token</v-btn>
+            <v-btn @click="sendAllNewRecordsToLabelStudio" Depressed class="ma-1">Send all</v-btn>
+            <v-btn @click="openDialogToken" Depressed class="ma-1">Token</v-btn>
         </v-row>
         <!-- TODO: height 800px should be dynamic? up to a user screen size?  -->
         <v-data-table
@@ -38,10 +38,10 @@
             </template>
             <template v-slot:item.actions="{ item }">
                 <v-row>
-                    <v-icon small class="mr-2" @click="send_record_to_label_studio(item)" title="Send to label-studio">
+                    <v-icon small class="mr-2" @click="sendRecordToLabelStudio(item)" title="Send to label-studio">
                         mdi-send-outline
                     </v-icon>
-                    <v-icon small class="mr-2" @click="remove_training_data_record(item)" title="Remove record">
+                    <v-icon small class="mr-2" @click="removeTrainingDataRecord(item)" title="Remove record">
                         mdi-delete-outline
                     </v-icon>
                 </v-row>
@@ -70,10 +70,10 @@
 
                 <v-card-actions>
                     <v-spacer></v-spacer>
-                    <v-btn color="blue darken-1" text @click="close_dialog_token">
+                    <v-btn color="blue darken-1" text @click="closeDialogToken">
                         Cancel
                     </v-btn>
-                    <v-btn color="blue darken-1" text @click="save_token">
+                    <v-btn color="blue darken-1" text @click="saveToken">
                         Save
                     </v-btn>
                 </v-card-actions>
@@ -112,27 +112,44 @@
             }
         },
         async beforeMount() {
-            let url = '{{ url_for("supercon.get_config") }}'
-            try {
-                const result = await axios.get(url, {})
-                this.config = result.data
-
-                let project_id = this.config['label-studio']['project_id']
-                if (project_id !== null && project_id !== undefined) {
-                    this.project_id = project_id
-                    sessionStorage.setItem('ProjectId', this.project_id);
-                }
-
-            } catch (e) {
-                console.error(e)
-                window.alert(JSON.stringify(e.response.data))
-            } finally {
-            }
+           await this.loadConfig();
+           await this.loadVersion();
         },
         mounted() {
             this.loadItems();
         },
         methods: {
+            async loadConfig() {
+                 let url = '{{ url_for("supercon.get_config") }}'
+                try {
+                    const result = await axios.get(url, {})
+                    this.config = result.data
+
+                    let project_id = this.config['label-studio']['project_id']
+                    if (project_id !== null && project_id !== undefined) {
+                        this.project_id = project_id
+                        sessionStorage.setItem('ProjectId', this.project_id);
+                    }
+
+                } catch (e) {
+                    console.error(e)
+                    window.alert(JSON.stringify(e.response.data))
+                } finally {
+                }
+            },
+            async loadVersion() {
+                let url = '{{ url_for("supercon.get_version") }}'
+                try {
+                    const result = await axios.get(url, {})
+                    this.version = result.data['version']
+
+                } catch (e) {
+                    console.error(e)
+                    window.alert(JSON.stringify(e.response.data))
+                } finally {
+
+                }
+            },
             loadItems() {
                 const url = '{{ url_for("supercon.get_training_data_list") }}'
                 axios.get(url)
@@ -141,7 +158,7 @@
                         }
                     )
             },
-            open_dialog_token() {
+            openDialogToken() {
                 let token = sessionStorage.getItem('Token');
                 if (token !== null && token !== undefined) {
                     this.token = token;
@@ -154,16 +171,16 @@
 
                 this.tokenDialog = true
             },
-            close_dialog_token() {
+            closeDialogToken() {
                 this.tokenDialog = false
             },
-            save_token() {
+            saveToken() {
                 console.log(this.token)
                 sessionStorage.setItem('Token', this.token);
                 sessionStorage.setItem('ProjectId', this.project_id);
-                this.close_dialog_token()
+                this.closeDialogToken()
             },
-            retrieve_token() {
+            retrieveToken() {
                 let token = sessionStorage.getItem('Token');
 
                 {#if (token === null || token === undefined) {#}
@@ -174,7 +191,7 @@
 
                 return token;
             },
-            async send_record_to_label_studio(item) {
+            async sendRecordToLabelStudio(item) {
                 let url = '{{ url_for("supercon.post_task_to_label_studio_project", project_id="project_id", record_id="record_id") }}'
                 url = url.replace(
                     "record_id",
@@ -192,7 +209,7 @@
                 )
 
 
-                let token = this.retrieve_token(item)
+                let token = this.retrieveToken(item)
 
                 const headers = {
                     "Authentication": "Token " + token
@@ -208,7 +225,7 @@
                     //
                 }
             },
-            async send_all_new_records_to_label_studio(item) {
+            async sendAllNewRecordsToLabelStudio() {
                 let url = '{{ url_for("supercon.post_tasks_to_label_studio_project", project_id="project_id") }}'
                 let project_id = sessionStorage.getItem("ProjectId")
                 if (project_id === null || project_id === undefined) {
@@ -220,7 +237,7 @@
                     project_id
                 )
 
-                let token = this.retrieve_token()
+                let token = this.retrieveToken()
 
                 const headers = {
                     "Authentication": "Token " + token
@@ -236,7 +253,7 @@
                     //
                 }
             },
-            async remove_training_data_record(item) {
+            async removeTrainingDataRecord(item) {
                 let url = '{{ url_for("supercon.delete_training_data_record", id="record_id") }}'
                 url = url.replace(
                     "record_id",
@@ -254,22 +271,6 @@
                 }
             }
         },
-
-        async beforeMount() {
-            let url = '{{ url_for("supercon.get_version") }}'
-            try {
-                const result = await axios.get(url, {})
-                this.version = result.data['version']
-
-            } catch (e) {
-                console.error(e)
-                window.alert(JSON.stringify(e.response.data))
-            } finally {
-
-            }
-        },
-        methods: {},
-  
         created() {
             this.selectedHeaders = this.headers.filter(h => !h.hidden)
         }
