--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -20,7 +20,7 @@
                 <v-select v-model="selectedHeaders" :items="headers" label="Select Columns" multiple outlined
                     return-object>
                 </v-select>
-                <v-btn @click="openCreateItemDialog" Depressed class="ma-2">New Item</v-btn>
+{#                <v-btn @click="openCreateItemDialog" Depressed class="ma-2">New Item</v-btn>#}
             </v-row>
             <v-data-table v-model="selectedItems" :headers="showHeaders" :items="items" :dense="true" single-select
                 loading-text="loading ..." :multi-sort="true" class="elevation-1"
@@ -88,13 +88,13 @@
                 </template>
                 <template v-slot:item.actions="{ item }">
                     <v-row>
-                        <v-icon small class="mr-1" @click="openEditItemDialog(item)" title="Open edit dialog">
+                        <v-icon small class="mr-1" @click="openEditItemDialog(item)" title="Edit">
                         mdi-pencil
                         </v-icon>
-                        <v-icon small class="mr-1" @click="removeRecord(item)" title="Remove record">
+                        <v-icon small class="mr-1" @click="removeRecord(item)" title="Remove">
                         mdi-delete-outline
                         </v-icon>
-                        <v-icon small class="mr-1" @click="newRecord(item)" title="New record">
+                        <v-icon small class="mr-1" @click="newRecord(item)" title="Add new">
                         mdi-folder-plus-outline
                         </v-icon>
                     </v-row>
