--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -10,6 +10,11 @@
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.6.3/dist/vuetify.min.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href={{ url_for('static', filename='resources/img/favicon.ico' ) }} />
     <link rel="shortcut icon" type="image/x-icon" href={{ url_for('static', filename='resources/img/favicon.ico' ) }} />
+    <style>
+        tr:nth-child(2n) {
+            background: floralwhite;
+        }
+    </style>
 </head>
 
 <body>
