add entrypoint to filter by document in the database view

--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -21,6 +21,8 @@
 </head>
 
 <body>
+    <div id="hash">{{ hash }}</div>
+
     <v-app id="app">
         <v-container fluid>
             <h2>SuperCon<sup>2</sup> | Database</h2>
