set a default document id (hash) in the database page

--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -21,8 +21,6 @@
 </head>
 
 <body>
-    <div id="hash">{{ hash }}</div>
-
     <v-app id="app">
         <v-container fluid>
             <h2>SuperCon<sup>2</sup> | Database</h2>
@@ -198,7 +196,7 @@
                         { text: 'Subsection', value: 'subsection', hidden: true, filter: this.subsectionFilter, filterKeyword: '', shouldHideEmpty: false },
                         {#{ text: 'Path', value: 'path', hidden: true, filter: this.pathFilter, filterKeyword: '', shouldHideEmpty: false },#}
                         {#{ text: 'Filename', value: 'filename', hidden: true, filter: this.filenameFilter, filterKeyword: '', shouldHideEmpty: false },#}
-                        { text: 'Document', value: 'hash', hidden: false, filter: this.hashFilter, filterKeyword: '', width: 120, shouldHideEmpty: false },
+                        { text: 'Document', value: 'hash', hidden: false, filter: this.hashFilter, filterKeyword: "{{hash}}", width: 120, shouldHideEmpty: false },
                         { text: 'Timestamp', value: 'timestamp', hidden: true, filter: this.timestampFilter, filterKeyword: '', shouldHideEmpty: false },
                         { text: 'DOI', value: 'doi', hidden: false, filter: this.doiFilter, filterKeyword: '', shouldHideEmpty: false },
                         { text: 'Authors', value: 'authors', width: 300, hidden: true, filter: this.authorsFilter, filterKeyword: '', shouldHideEmpty: false },
