--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -23,7 +23,14 @@
 <body>
     <v-app id="app">
         <v-container fluid>
+            <v-row class="justify-space-between ma-0">
+                <v-card flat>
             <h2>SuperCon<sup>2</sup> | Database</h2>
+                </v-card>
+                <v-card flat>
+                    <v-icon @click="shouldShowShortcutKeysDialog = true">mdi-help-circle</v-icon>
+                </v-card>
+            </v-row>
             <v-row justify="space-between" class="ma-0">
                 <v-select v-model="selectedHeaders" :items="headers" label="Select Columns" multiple outlined
                     return-object>
@@ -102,15 +109,16 @@
                         <v-icon small class="mr-1" @click="removeRecord(item)" title="Remove">
                         mdi-delete-outline
                         </v-icon>
-                        <v-icon small class="mr-1" @click="newRecord(item)" title="Add new">
+                        <v-icon small class="mr-1" @click="openCreateItemDialog(item)" title="Add new">
                         mdi-folder-plus-outline
                         </v-icon>
                     </v-row>
                 </template>
             </v-data-table>
             <p><span style="color:#848484;">&copy; Contributors, 2022 |</span> <span id="version" style="color:#848484;" v-html="version"></span></p>
-            <v-dialog v-model="dialog">
+            <v-dialog v-model="itemDialog.shouldShow">
                 <v-card>
+                    <v-card-title>[[ itemDialogTitle ]]</v-card-title>
                     <v-card-text>
                         <v-container>
                             <v-row v-for="row of rowsOnItemEditDialog">
@@ -136,6 +144,20 @@
                     </v-card-actions>
                 </v-card>
             </v-dialog>
+            <v-dialog v-model="shouldShowShortcutKeysDialog">
+                <v-card>
+                    <v-card-title>
+                        Shortcut Keys
+                    </v-card-title>
+                    <v-card-text>
+                        <v-container>
+                            <v-row v-for="key of shortcutKeys" align="center">
+                                <v-chip class="ma-2" label>[[key.name]]</v-chip>[[key.text]]
+                            </v-row>
+                        </v-container>
+                    </v-card-text>
+                </v-card>
+            </v-dialog>
         </v-container>
     </v-app>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
@@ -152,7 +174,32 @@
             vuetify: new Vuetify(),
             data() {
                 return {
-                    dialog: false,
+                    itemDialog: {
+                        mode: '', // 'edit', 'new'
+                        shouldShow: false,
+                    },
+                    shouldShowShortcutKeysDialog: false,
+                    shortcutKeys: [
+                        {
+                            name: 'n',
+                            text: 'open the dialog for adding a new record from the current record'
+                        }, {
+                            name: 'e',
+                            text: 'open the dialog for editing the current record'
+                        }, {
+                            name: 'ArrowUp',
+                            text: 'move up one record'
+                        }, {
+                            name: 'ArrowDown',
+                            text: 'move down one record'
+                        }, {
+                            name: 'enter',
+                            text: 'flag/unflag the current record'
+                        }, {
+                            name: '?',
+                            text: 'open the shortcut keys dialog',
+                        }
+                    ],
                     isLoading: true,
                     version: 'unknown version',
                     editedItem: {},
@@ -356,6 +403,14 @@
                         })
                     ))
                 },
+                itemDialogTitle() {
+                    switch (this.itemDialog.mode) {
+                        case 'edit':
+                            return 'Edit the record'
+                        case 'new':
+                            return 'Add a new record'
+                    }
+                }
             },
             mounted() {
                 this.loadItems()
@@ -392,18 +447,6 @@
                         this.isLoading = false
                     })
                 },
-                isReadOnlyOnDialog(key) {
-                    const keys = ['timestamp', 'type', 'status', 'flag']
-                    return keys.includes(key)
-                },
-                isHiddenOnDialog(key) {
-                    const keys = ['document', 'actions']
-                    return keys.includes(key)
-                },
-                isRequiredOnDialog(key) {
-                    const keys = ['doi', 'hash']
-                    return keys.includes(key)
-                },
                 hasChangedPageCount(pageCount) {
                     this.pageCount = pageCount
                 },
@@ -419,10 +462,13 @@
                         return
                     }
                     // disable shortcuts when edit dialog opens
-                    if (this.dialog) {
+                    if (this.itemDialog.shouldShow) {
                         return
                     }
                     switch (event.key) {
+                        case '?':
+                            event.preventDefault()
+                            this.shouldShowShortcutKeysDialog = true
                         case 'ArrowDown':
                             event.preventDefault()
                             switch (this.rowNumber) {
@@ -464,14 +510,16 @@
                         // e stands for "edit item"
                         case 'e':
                             event.preventDefault()
-                            if (this.selectedItems.length > 0) {
+                            if (this.selectedItems.length === 1) {
                                 this.openEditItemDialog(this.selectedItem)
                             }
                             break
                         // n stands for "new item"
                         case 'n':
                             event.preventDefault()
-                            this.openCreateItemDialog()
+                            if (this.selectedItems.length === 1) {
+                                this.openCreateItemDialog(this.selectedItem)
+                            }
                             break
                         default:
                             break;
@@ -639,16 +687,26 @@
                 openEditItemDialog(item) {
                     // make a deep copy so that the record is not updated in the table
                     this.editedItem = JSON.parse(JSON.stringify(item))
-                    this.dialog = true
+                    this.itemDialog = {
+                        shouldShow: true,
+                        mode: 'edit'
+                    }
                 },
-                openCreateItemDialog() {
-                    this.editedItem = {}
-                    {#let d = new Date();#}
-                    {#this.editedItem['timestamp'] = d.toISOString();#}
-                    this.dialog = true
+                openCreateItemDialog(item) {
+                    let newItem = {}
+                    let fields = ['hash', 'doi', "authors", "title", "publisher", "journal", "year"]
+
+                    fields.forEach(function (field) {
+                        newItem[field] = item[field]
+                    })
+                    this.editedItem = newItem
+                    this.itemDialog = {
+                        shouldShow: true,
+                        mode: 'new'
+                    }
                 },
                 close() {
-                    this.dialog = false
+                    this.itemDialog.shouldShow = false
                 },
                 async save() {
                     if (this.editedItem.id) {
@@ -709,20 +767,6 @@
                     } finally {
                         //
                     }
-                },
-                async newRecord(item) {
-                    // make a deep copy so that the record is not updated in the table
-                    let newItem = {}
-                    let fields = ['hash', 'doi', "authors", "title", "publisher", "journal", "year"]
-
-                    fields.forEach(function (field) {
-                        newItem[field] = item[field]
-                    })
-                    {#let d = new Date();#}
-                    {#newItem['timestamp'] = d.toISOString();#}
-
-                    this.editedItem = newItem
-                    this.dialog = true
                 },
                 getItemClass(item) {
                     const store = itemClassStore
