add Esc key shortcut on the help dialog

--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -198,6 +198,9 @@
                         }, {
                             name: '?',
                             text: 'open the shortcut keys dialog',
+                        }, {
+                            name: 'esc',
+                            text: 'close the open dialog',
                         }
                     ],
                     isLoading: true,
