make the item dialog's width full

--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -120,7 +120,7 @@
                 <v-card>
                     <v-card-title>[[ itemDialogTitle ]]</v-card-title>
                     <v-card-text>
-                        <v-container>
+                        <v-container fluid>
                             <v-row v-for="row of rowsOnItemEditDialog">
                                 <v-col :cols="row.config.cols" v-for="col of row.cols">
                                     <v-text-field
