make the help dialog narrow

--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -144,7 +144,7 @@
                     </v-card-actions>
                 </v-card>
             </v-dialog>
-            <v-dialog v-model="shouldShowShortcutKeysDialog">
+            <v-dialog v-model="shouldShowShortcutKeysDialog" max-width="600">
                 <v-card>
                     <v-card-title>
                         Shortcut Keys
