--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -37,6 +37,7 @@
                 </v-select>
 {#                <v-btn @click="openCreateItemDialog" Depressed class="ma-2">New Item</v-btn>#}
             </v-row>
+            <div id="hash">{{ base_url }}</div>
             <v-data-table v-model="selectedItems" :headers="showHeaders" :items="items" :dense="true" single-select
                 loading-text="loading ..." :loading="isLoading" :multi-sort="true" class="elevation-1" :item-class="getItemClass"
                 @current-items="hasChangedCurrentItems" :page.sync="page" :footer-props="{'items-per-page-options':[20, 50, 100]}"
