--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -183,25 +183,25 @@
                     shortcutKeys: [
                         {
                             name: 'n',
-                            text: 'open the dialog for adding a new record from the current record'
+                            text: 'Add new record (in the same document of the selected record)'
                         }, {
                             name: 'e',
-                            text: 'open the dialog for editing the current record'
+                            text: 'Edit the selected record'
                         }, {
                             name: 'ArrowUp',
-                            text: 'move up one record'
+                            text: 'Move selection up one record'
                         }, {
                             name: 'ArrowDown',
-                            text: 'move down one record'
+                            text: 'Move selection down one record'
                         }, {
                             name: 'enter',
-                            text: 'flag/unflag the current record'
+                            text: 'Flag/unflag the selected record'
                         }, {
                             name: '?',
-                            text: 'open the shortcut keys dialog',
+                            text: 'Show the keyboard shortcuts dialog',
                         }, {
                             name: 'esc',
-                            text: 'close the open dialog',
+                            text: 'Close this dialog',
                         }
                     ],
                     isLoading: true,
