add timestamp in training data collection #112

--- a/supercon2/templates/training_data.html
+++ b/supercon2/templates/training_data.html
@@ -100,6 +100,7 @@
                     {text: 'Id', value: 'id', sortable: false, hidden: true},
                     {text: 'Text', value: 'annotated_text', sortable: false, hidden: false},
                     {text: 'Status', value: 'status', sortable: true, hidden: false},
+                    {text: 'Timestamp', value: 'timestamp', sortable: true, hidden: false},
                     {text: 'Task Id', value: 'task_id', sortable: true, hidden: false},
                     {text: 'Document', value: 'hash', sortable: true, hidden: false},
                     {text: 'Actions', value: 'actions', sortable: false, hidden: false},
