add error type in the database

--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -261,6 +261,7 @@
                         { text: 'Publisher', value: 'publisher', hidden: true, filter: this.publisherFilter, filterKeyword: '', shouldHideEmpty: false },
                         { text: 'Journal', value: 'journal', hidden: true, filter: this.journalFilter, filterKeyword: '', shouldHideEmpty: false },
                         { text: 'Year', value: 'year', hidden: false, filter: this.yearFilter, filterKeyword: '', shouldHideEmpty: false },
+                        { text: 'Latest error type', value: 'error_type', hidden: true, filter: this.hashFilter, shouldHideEmpty: false },
                         // CONFIRM: check column locations for type, status and flag
                         {
                             text: 'Type', value: 'type', hidden: true, filter: this.typeFilter, filterKeyword: 'all', width: 80,
@@ -316,6 +317,8 @@
                         }, {
                             key: 'id',
                             disabled: true,
+                        }, {
+                            key: 'error_type'
                         }]
                     }, {
                         config: {
