--- a/supercon2/templates/index.html
+++ b/supercon2/templates/index.html
@@ -87,7 +87,7 @@
     </div>
 
     <footer>
-        <p><span style="color:#848484;">&copy; Contributors, 2022 |</span> <span id="version" style="color:#848484;">unknown version</span></p>
+        <p><span style="color:#848484;">&copy; Contributors, 2022 |</span> <span id="version" style="color:#848484;">{{ version }} </span></p>
     </footer>
 </div>
 
